- Fix related bug on user status & notification layout bug

--- a/src/wp-content/themes/phuckhang/style.css
+++ b/src/wp-content/themes/phuckhang/style.css
@@ -871,6 +871,11 @@ textarea.message {
     padding-top: 20px;
 }
 
+.col-no-padding{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 /**
  * Message
  */
